src/styles/vsb.scss
.vSrcollbar {
  position: absolute;
  top: 0;
  right: 0;
  min-width: 12px;
  height: 100%;
  overflow-y: scroll;
  overflow-x: hidden;
  -webkit-overflow-scrolling: touch;
  background-color: transparent;

  &_debugMode {
    width: 400px;
    transform: translate(-16px, 0px);
    background-color: #5c637033;
  }

  &_googleChrome {
    min-width: 16px;
  }

  &_mozillaFirefox {
    min-width: 18px;
  }

  &_safari {
    min-width: 16px;

    &::-webkit-scrollbar {
      //-webkit-appearance: none;
      //width: 16px; /* Всегда широкий как при наведении */
    }
  }

  // Специально для touch устройств
  @media (pointer: coarse) {
    width: 30px;

    &::-webkit-scrollbar {
      width: 16px;
    }

    &::-webkit-scrollbar-thumb {
      background: rgba(0, 0, 0, 0.4);
      min-height: 60px;
      border-radius: 10px;
    }
  }
}

.vScrollbarFiller {
  width: 100%;
  //height: 10000000px;
  //background-color: red;
}

.mobileScrollbar {
  &-track {
    position: absolute;
    top: 0;
    right: 0;
    transition: opacity 0.3s ease;
    z-index: 9;
    height: 100%;
    width: 30px;
    background: #f1f1f1;
    opacity: 0.8;

    &:hover {
      opacity: 0.6;
    }
  }

  &-thumb {
    position: absolute;
    top: 0;
    left: 0;
    min-height: 30px;
    width: 100%;
    cursor: pointer;
    background: #888;
    border-radius: 15px;
    transition: background-color 0.2s ease;
  }

  &-srcElem {
    overflow-y: scroll;
    overflow-x: hidden;
    -webkit-overflow-scrolling: touch;
    scrollbar-width: none;
    -ms-overflow-style: none;
    padding-right: 17px;
    margin-right: -17px;

    &::-webkit-scrollbar {
      display: none;
    }
  }
}

